@@ -46,10 +46,10 @@ Io* Io::start()
   return this;
 }
 
-int Io::wait_any_for(std::vector<IoPtr>* ios, double timeout)
+int Io::wait_any_for(const std::vector<IoPtr>& ios, double timeout)
 {
-  std::vector<kernel::activity::IoImpl*> rios(ios->size());
-  std::transform(begin(*ios), end(*ios), begin(rios),
+  std::vector<kernel::activity::IoImpl*> rios(ios.size());
+  std::transform(begin(ios), end(ios), begin(rios),
                  [](const IoPtr& io) { return static_cast<kernel::activity::IoImpl*>(io->pimpl_.get()); });
 
   kernel::actor::ActorImpl* issuer = kernel::actor::ActorImpl::self();
@@ -60,7 +60,7 @@ int Io::wait_any_for(std::vector<IoPtr>* ios, double timeout)
       },
       &observer);
   if (changed_pos != -1)
-    ios->at(changed_pos)->complete(State::FINISHED);
+    ios.at(changed_pos)->complete(State::FINISHED);
   return changed_pos;
 }
 
